--- a/style.css
+++ b/style.css
@@ -6,3 +6,23 @@
 .card:hover {
     transform: scale(1.05);
 }
+.card-img-top {
+    width: 100%;
+    height: auto;
+}
+.card-text.collapsed {
+    max-height: 100px;
+    overflow: hidden;
+}
+.btn-details {
+    display: block;
+    margin-top: 10px;
+}
+
+.transform-btn {
+    transition: transform 0.3s ease;
+}
+
+.transform-btn:hover {
+    transform: scale(1.1);
+}
